@@ -17907,6 +17907,32 @@ operator|.
 name|NAME
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|StringUtils
+operator|.
+name|isBlank
+argument_list|(
+name|coreName
+argument_list|)
+condition|)
+block|{
+name|coreName
+operator|=
+name|message
+operator|.
+name|getStr
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|PROPERTY_PREFIX
+operator|+
+name|CoreAdminParams
+operator|.
+name|NAME
+argument_list|)
+expr_stmt|;
+block|}
 specifier|final
 name|String
 name|asyncId
