@@ -7056,80 +7056,21 @@ name|random
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|CollectionAdminRequest
-operator|.
-name|AddReplica
-name|addReplica
-init|=
-operator|new
-name|CollectionAdminRequest
-operator|.
-name|AddReplica
-argument_list|()
-decl_stmt|;
-name|addReplica
-operator|.
-name|setCollectionName
-argument_list|(
-name|collectionName
-argument_list|)
-expr_stmt|;
-name|addReplica
-operator|.
-name|setShardName
-argument_list|(
-literal|"shard1"
-argument_list|)
-expr_stmt|;
-name|addReplica
-operator|.
-name|setNode
-argument_list|(
-name|nodeList
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|client
-operator|.
-name|request
-argument_list|(
-name|addReplica
-argument_list|)
-expr_stmt|;
-name|long
-name|timeout
-init|=
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-operator|+
-literal|3000
-decl_stmt|;
 name|Replica
 name|newReplica
 init|=
-literal|null
-decl_stmt|;
-for|for
-control|(
-init|;
-name|System
+name|doAddReplica
+argument_list|(
+name|collectionName
+argument_list|,
+literal|"shard1"
+argument_list|,
+name|Assign
 operator|.
-name|currentTimeMillis
-argument_list|()
-operator|<
-name|timeout
-condition|;
-control|)
-block|{
-name|Slice
-name|slice
-init|=
+name|assignNode
+argument_list|(
+name|collectionName
+argument_list|,
 name|client
 operator|.
 name|getZkStateReader
@@ -7137,29 +7078,20 @@ argument_list|()
 operator|.
 name|getClusterState
 argument_list|()
-operator|.
-name|getSlice
-argument_list|(
-name|collectionName
+argument_list|)
 argument_list|,
-literal|"shard1"
+name|nodeList
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|,
+name|client
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
-name|newReplica
-operator|=
-name|slice
-operator|.
-name|getReplica
-argument_list|(
-name|newReplicaName
-argument_list|)
-expr_stmt|;
-block|}
-name|assertNotNull
-argument_list|(
-name|newReplica
-argument_list|)
-expr_stmt|;
 name|log
 operator|.
 name|info
@@ -7213,45 +7145,6 @@ name|BASE_URL_PROP
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|newReplicaName
-operator|=
-name|Assign
-operator|.
-name|assignNode
-argument_list|(
-name|collectionName
-argument_list|,
-name|client
-operator|.
-name|getZkStateReader
-argument_list|()
-operator|.
-name|getClusterState
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|addReplica
-operator|=
-operator|new
-name|CollectionAdminRequest
-operator|.
-name|AddReplica
-argument_list|()
-expr_stmt|;
-name|addReplica
-operator|.
-name|setCollectionName
-argument_list|(
-name|collectionName
-argument_list|)
-expr_stmt|;
-name|addReplica
-operator|.
-name|setShardName
-argument_list|(
-literal|"shard2"
-argument_list|)
-expr_stmt|;
 name|Properties
 name|props
 init|=
@@ -7280,48 +7173,20 @@ name|instancePathStr
 argument_list|)
 expr_stmt|;
 comment|//Use name via the property.instanceDir method
-name|addReplica
-operator|.
-name|setProperties
-argument_list|(
-name|props
-argument_list|)
-expr_stmt|;
-name|client
-operator|.
-name|request
-argument_list|(
-name|addReplica
-argument_list|)
-expr_stmt|;
-name|timeout
-operator|=
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-operator|+
-literal|3000
-expr_stmt|;
 name|newReplica
 operator|=
-literal|null
-expr_stmt|;
-for|for
-control|(
-init|;
-name|System
+name|doAddReplica
+argument_list|(
+name|collectionName
+argument_list|,
+literal|"shard2"
+argument_list|,
+name|Assign
 operator|.
-name|currentTimeMillis
-argument_list|()
-operator|<
-name|timeout
-condition|;
-control|)
-block|{
-name|Slice
-name|slice
-init|=
+name|assignNode
+argument_list|(
+name|collectionName
+argument_list|,
 name|client
 operator|.
 name|getZkStateReader
@@ -7329,24 +7194,15 @@ argument_list|()
 operator|.
 name|getClusterState
 argument_list|()
-operator|.
-name|getSlice
-argument_list|(
-name|collectionName
-argument_list|,
-literal|"shard2"
 argument_list|)
-decl_stmt|;
-name|newReplica
-operator|=
-name|slice
-operator|.
-name|getReplica
-argument_list|(
-name|newReplicaName
+argument_list|,
+literal|null
+argument_list|,
+name|client
+argument_list|,
+name|props
 argument_list|)
 expr_stmt|;
-block|}
 name|assertNotNull
 argument_list|(
 name|newReplica
@@ -7536,7 +7392,229 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|// Check that specifying property.name works. DO NOT remove this when the "name" property is deprecated
+comment|// for ADDREPLICA, this is "property.name". See SOLR-7132
+name|props
+operator|=
+operator|new
+name|Properties
+argument_list|()
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|NAME
+argument_list|,
+literal|"propertyDotName"
+argument_list|)
+expr_stmt|;
+name|newReplica
+operator|=
+name|doAddReplica
+argument_list|(
+name|collectionName
+argument_list|,
+literal|"shard1"
+argument_list|,
+name|Assign
+operator|.
+name|assignNode
+argument_list|(
+name|collectionName
+argument_list|,
+name|client
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getClusterState
+argument_list|()
+argument_list|)
+argument_list|,
+name|nodeList
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|,
+name|client
+argument_list|,
+name|props
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"'core' should be 'propertyDotName' "
+argument_list|,
+literal|"propertyDotName"
+argument_list|,
+name|newReplica
+operator|.
+name|getStr
+argument_list|(
+literal|"core"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
+block|}
+DECL|method|doAddReplica
+specifier|private
+name|Replica
+name|doAddReplica
+parameter_list|(
+name|String
+name|collectionName
+parameter_list|,
+name|String
+name|shard
+parameter_list|,
+name|String
+name|newReplicaName
+parameter_list|,
+name|String
+name|node
+parameter_list|,
+name|CloudSolrClient
+name|client
+parameter_list|,
+name|Properties
+name|props
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|SolrServerException
+block|{
+name|CollectionAdminRequest
+operator|.
+name|AddReplica
+name|addReplica
+init|=
+operator|new
+name|CollectionAdminRequest
+operator|.
+name|AddReplica
+argument_list|()
+decl_stmt|;
+name|addReplica
+operator|.
+name|setCollectionName
+argument_list|(
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|addReplica
+operator|.
+name|setShardName
+argument_list|(
+name|shard
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|node
+operator|!=
+literal|null
+condition|)
+block|{
+name|addReplica
+operator|.
+name|setNode
+argument_list|(
+name|node
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|props
+operator|!=
+literal|null
+condition|)
+block|{
+name|addReplica
+operator|.
+name|setProperties
+argument_list|(
+name|props
+argument_list|)
+expr_stmt|;
+block|}
+name|client
+operator|.
+name|request
+argument_list|(
+name|addReplica
+argument_list|)
+expr_stmt|;
+name|long
+name|timeout
+init|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+operator|+
+literal|3000
+decl_stmt|;
+name|Replica
+name|newReplica
+init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+init|;
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+operator|<
+name|timeout
+condition|;
+control|)
+block|{
+name|Slice
+name|slice
+init|=
+name|client
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getSlice
+argument_list|(
+name|collectionName
+argument_list|,
+name|shard
+argument_list|)
+decl_stmt|;
+name|newReplica
+operator|=
+name|slice
+operator|.
+name|getReplica
+argument_list|(
+name|newReplicaName
+argument_list|)
+expr_stmt|;
+block|}
+name|assertNotNull
+argument_list|(
+name|newReplica
+argument_list|)
+expr_stmt|;
+return|return
+name|newReplica
+return|;
 block|}
 annotation|@
 name|Override
